--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.0",
     "argon2": "^0.30.2",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "exprss": "^0.0.1-security",
     "prisma": "^4.7.0",
     "zod": "^3.19.1"
